--- a/style/style.css
+++ b/style/style.css
@@ -4,6 +4,7 @@ h3 {
   text-align: center;
 }
 
-a {
-  text-align: center;
+.navigation-links {
+  display: flex;
+  justify-content: space-evenly;
 }
