--- a/style/style.css
+++ b/style/style.css
@@ -1,10 +1,53 @@
+:root {
+  --primary-color: #809bce;
+  --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+}
+
+body {
+  margin: 60px 0;
+}
+
 h1,
 h2,
 h3 {
   text-align: center;
+  margin: 0;
+}
+
+h1 {
+  font-size: 96px;
+}
+
+h2 {
+  font-size: 48px;
+}
+
+h3 {
+  font-size: 24px;
+  opacity: 0.7;
 }
 
 .navigation-links {
   display: flex;
-  justify-content: space-evenly;
+  margin-top: 40px;
+  justify-content: center;
+}
+
+.navigation-links a {
+  border-radius: 4px;
+  box-shadow: var(--box-shadow);
+  margin: 20px;
+  padding: 20px 15px;
+  text-decoration: none;
+  text-transform: capitalize;
+}
+
+.contact-link {
+  background: var(--primary-color);
+  color: white;
+}
+
+.about-link {
+  border: 1px solid var(--primary-color);
+  color: var(--primary-color);
 }
