--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,6 @@
 :root {
   --primary-color: #809bce;
+  --secondary-color: #b8e0d2;
   --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
 }
 
@@ -50,4 +51,40 @@ h3 {
 .about-link {
   border: 1px solid var(--primary-color);
   color: var(--primary-color);
+}
+
+.homepage-link {
+  color: var(--primary-color);
+  display: block;
+  text-align: center;
+}
+
+p {
+  background: var(--secondary-color);
+  border-radius: 4px;
+  font-size: 18px;
+  line-height: 1.5;
+  padding: 20px;
+  text-align: center;
+}
+
+.about-paragraphs {
+  display: flex;
+  margin-top: 30px 0;
+}
+
+.about-paragraphs p {
+  margin: 10px;
+}
+
+.email-link {
+  color: var(--primary-color);
+  display: block;
+  font-size: 28px;
+  text-align: center;
+  text-decoration: none;
+}
+
+.email-link:hover {
+  text-decoration: underline;
 }
