--- a/style/style.css
+++ b/style/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  margin: 60px 0;
+  margin: 100px 0;
 }
 
 h1,
@@ -26,6 +26,28 @@ h2 {
 h3 {
   font-size: 24px;
   opacity: 0.7;
+}
+
+@media (max-width: 576px) {
+  h1 {
+    font-size: 48px;
+    line-height: 1.5;
+  }
+
+  h2 {
+    font-size: 32px;
+    text-align: center;
+  }
+
+  p {
+    text-align: center;
+  }
+
+  .project-link {
+    display: block;
+    text-align: center;
+    margin: 0 20px;
+  }
 }
 
 .navigation-links {
