--- a/style/style.css
+++ b/style/style.css
@@ -2,10 +2,22 @@
   --primary-color: #809bce;
   --secondary-color: #b8e0d2;
   --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+  --heading-font-family: "Playfair Display", serif;
+  --default-font-family: "Poppins", sans-serif;
 }
 
 body {
   margin: 100px 0;
+  font-family: var(--default-font-family);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--heading-font-family);
 }
 
 h1,
