--- a/style/style.css
+++ b/style/style.css
@@ -18,6 +18,7 @@ h4,
 h5,
 h6 {
   font-family: var(--heading-font-family);
+  font-weight: bold;
 }
 
 h1,
@@ -97,6 +98,7 @@ p {
   background: var(--secondary-color);
   border-radius: 4px;
   font-size: 18px;
+  font-weight: normal;
   line-height: 1.5;
   padding: 20px;
   text-align: center;
