--- a/style/style.css
+++ b/style/style.css
@@ -124,3 +124,25 @@ p {
 .email-link:hover {
   text-decoration: underline;
 }
+
+.hero {
+  background: #d7e3fc;
+}
+
+.hero p {
+  background: #d7e3fc;
+  font-size: 36px;
+  font-weight: bold;
+  margin: 0;
+}
+
+.hero h3 {
+  font-family: var(--default-font-family);
+  font-weight: normal;
+}
+
+.btn-branding {
+  background: var(--primary-color);
+  color: white;
+  border-radius: 4px;
+}
